codepkg/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Architecture_Style__c</fullName>
        <label>Architecture Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts &amp; Crafts</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>Cape Cod</fullName>
                </value>
                <value>
                    <fullName>Cleveland Double</fullName>
                </value>
                <value>
                    <fullName>Colonial Revival</fullName>
                </value>
                <value>
                    <fullName>Dutch Colonial Revival</fullName>
                </value>
                <value>
                    <fullName>Foursquare</fullName>
                </value>
                <value>
                    <fullName>Georgian Colonial Revival</fullName>
                </value>
                <value>
                    <fullName>Gothic Revival</fullName>
                </value>
                <value>
                    <fullName>Greek Revival</fullName>
                </value>
                <value>
                    <fullName>Italianate</fullName>
                </value>
                <value>
                    <fullName>Minimal Traditional</fullName>
                </value>
                <value>
                    <fullName>Octagonal</fullName>
                </value>
                <value>
                    <fullName>Queen Anne</fullName>
                </value>
                <value>
                    <fullName>Ranch</fullName>
                </value>
                <value>
                    <fullName>Second Empire</fullName>
                </value>
                <value>
                    <fullName>Stick</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Tudor Revival</fullName>
                </value>
                <value>
                    <fullName>Workers Cottage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Council_Member__c</fullName>
        <formula>Ward__r.Council_Member__r.FirstName + &apos; &apos; +  Ward__r.Council_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Council Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Ward__r.City__r.County__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>African-American</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exterior_Type__c</fullName>
        <label>Exterior Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Brick/Shingle</fullName>
                </value>
                <value>
                    <fullName>HardiPlank</fullName>
                </value>
                <value>
                    <fullName>Insul-brick</fullName>
                </value>
                <value>
                    <fullName>Shingle</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Stucco</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Female_Headed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Female Headed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Level__c</fullName>
        <label>Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>very low</fullName>
                </value>
                <value>
                    <fullName>low</fullName>
                </value>
                <value>
                    <fullName>moderate</fullName>
                </value>
                <value>
                    <fullName>high</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Homeowner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Homeowner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Non-Homeowner Contact)</relationshipLabel>
        <relationshipName>PropertiesNonHomeowned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_occupants__c</fullName>
        <label>Number of occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_65__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 65</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Owner 2)</relationshipLabel>
        <relationshipName>Owned_Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Owned_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <label>Parcel Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_2__c</fullName>
        <label>Photo 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Previous Owner 1)</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Previous Owner 2)</relationshipLabel>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Previous Owner 3)</relationshipLabel>
        <relationshipName>Properties3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Full_Name__c</fullName>
        <formula>Street_Full__c + &apos; &apos; + City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Full__c</fullName>
        <formula>Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ward_Number__c</fullName>
        <formula>Ward__r.Ward_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ward Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ward__c.Ward_Number__c</field>
                <operation>equals</operation>
                <valueField>Ward__c.Ward_Number__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ward__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Window_Type__c</fullName>
        <label>Window Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Aluminum Clad</fullName>
                </value>
                <value>
                    <fullName>Leaded Glass</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Steel/Metal</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>census_tract_number__c</fullName>
        <label>Census tract number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Old Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner__c</columns>
        <columns>Street__c</columns>
        <columns>Ward_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>Cleveland</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>